--- a/Results/map_drug_name_to_smiles.ipynb
+++ b/Results/map_drug_name_to_smiles.ipynb
@@ -74,12 +74,12 @@
     "\n",
     "    data.rename(columns={\n",
     "        \"reasoning\": f\"{name}_reasoning\",\n",
-    "        \"less_determination\": f\"{name}_less_determination\",\n",
-    "        \"binary_determination\": f\"{name}_binary_determination\",\n",
+    "        \"ternary_rating\": f\"{name}_ternary_rating\",\n",
+    "        \"binary_rating\": f\"{name}_binary_rating\",\n",
     "    }, inplace=True)\n",
     "\n",
-    "    data[f\"{name}_less_determination_no_most_only_0_1\"] = [1 if tox == \"Most\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_less_determination\"]]\n",
-    "    data[f\"{name}_binary_determination_0_1\"] = [1 if tox == \"Yes\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_binary_determination\"]]\n",
+    "    data[f\"{name}_confident_ternary_rating_0_1\"] = [1 if tox == \"Most\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_confident_ternary_rating\"]]\n",
+    "    data[f\"{name}_binary_rating_0_1\"] = [1 if tox == \"Yes\" else (0 if tox == \"No\" else np.nan) for tox in data[f\"{name}_binary_rating\"]]\n",
     "\n",
     "# Merge datasets on generic name\n",
     "datasets = list(name_to_dataset.values())\n",
@@ -103,14 +103,6 @@
    "id": "1e0fac271a1e965c",
    "outputs": [],
    "execution_count": 42
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "# TODO: check if binary ever disagrees with no/most from less determination",
-   "id": "ea9119d9c006af55"
   },
   {
    "metadata": {
